new file:   .vscode/launch.json 	modified:   css/responsive.css 	modified:   css/style.css 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -495,7 +495,7 @@
           <div class="col-lg-9 col-md-12 text-center text-lg-start">
             <h2>Fitur Rumah</h2>
           </div>
-          <div class="col-3">
+          <div class="col see-all">
             <button class="button-fitur">
               Lihat Semua..
               <img src="Assets/img/Right Arrow.png" alt="" class="ms-4" />
@@ -608,12 +608,12 @@
                   <a href="">Jl. Babelan Raya No.01</a>
                 </div>
 
-                <div class="mb-3">
+                <div class="mb-3 d-flex align-items-center">
                   <img src="Assets/img/Email Icon.png" alt="" />
                   <a href="">021-000-000</a>
                 </div>
 
-                <div class="mb-3">
+                <div class="mb-3 d-flex align-items-center">
                   <img src="Assets/img/Email Icon.png" alt="" />
                   <a href="">rab.reality@gmail.com</a>
                 </div>
