new file:   Assets/img/Icon exit.png 	modified:   css/responsive.css 	modified:   css/style.css 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -626,7 +626,10 @@
               <a href="" class="me-lg-2 me-1"
                 ><img src="Assets/img/Twiter Icon.png" alt=""
               /></a>
-              <a href="" class="me-lg-2 me-1"
+              <a
+                href="https://www.instagram.com/rab.realty/"
+                target="_blank"
+                class="me-lg-2 me-1"
                 ><img src="Assets/img/Instagram Iicon.png" alt=""
               /></a>
               <a href="" class="linkrumahimpian">rab.realty</a>
@@ -703,7 +706,12 @@
 
     <!-- On Going -->
     <div id="on-going" onclick="closeOnGOing()">
-      <div class="full-screen">Still On Going...</div>
+      <div class="full-screen">
+        <div class="exit">
+          <img width="50px" src="Assets/img/Icon exit.png" alt="" />
+        </div>
+        <div class="going">Still On Going...</div>
+      </div>
     </div>
 
     <!-- Optional JavaScript; choose one of the two! -->
