--- a/index.html
+++ b/index.html
@@ -718,10 +718,16 @@
     <div id="property-modal">
       <div class="full-screen">
         <div class="exit">
+          <a
+            href="https://api.whatsapp.com/send/?phone=6285777891487&text&type=phone_number&app_absent=0"
+            class="me-lg-2 me-1"
+            target="_blank"
+            ><img src="Assets/img/Facebook Icon.png" alt=""
+          /></a>
           <img onclick="closeSlider()" src="Assets/img/Icon exit.png" alt="" />
         </div>
         <div class="slider">
-          <div class="card-fitur me-3 position-relative">
+          <div class="card-slide me-3 position-relative">
             <img id="slide" src="" alt="property pictures" />
             <div class="overlay position-absolute top-0 bottom-0 start-0 end-0">
               <div
