modified:   css/responsive.css 	modified:   css/style.css 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -722,7 +722,10 @@
             href="https://api.whatsapp.com/send/?phone=6285777891487&text&type=phone_number&app_absent=0"
             class="me-lg-2 me-1"
             target="_blank"
-            ><img src="Assets/img/Facebook Icon.png" alt=""
+            ><img
+              style="background-color: black"
+              src="Assets/img/Facebook Icon.png"
+              alt=""
           /></a>
           <img onclick="closeSlider()" src="Assets/img/Icon exit.png" alt="" />
         </div>
