--- a/index.html
+++ b/index.html
@@ -507,7 +507,7 @@
 
         <div class="container position-relative mt-5">
           <div class="row">
-            <div class="col-12 d-flex justify-content-start">
+            <div class="col-12 d-flex justify-content-start" id="swiper-slide">
               <div class="card-fitur me-3 position-relative">
                 <img src="Assets/img/Fitur Rumah 1.png" alt="" />
 
@@ -579,12 +579,14 @@
           </div>
           <button
             class="button-arrow-left position-absolute start-0 top-50 translate-middle-y"
+            onclick="prevSlide()"
           >
             <img src="Assets/img/Left Arrow lg.png" alt="" />
           </button>
 
           <button
             class="button-arrow-right position-absolute end-0 top-50 translate-middle-y"
+            onclick="nextSlide()"
           >
             <img src="Assets/img/Right Arrow lg.png" alt="" />
           </button>
