new file:   Assets/img/whatsapp.png 	modified:   css/style.css 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -721,13 +721,10 @@
       <div class="full-screen">
         <div class="exit">
           <a
-            href="https://api.whatsapp.com/send/?phone=6285777891487&text&type=phone_number&app_absent=0"
+            href="https://api.whatsapp.com/send/?phone=6281385375855&text&type=phone_number&app_absent=0"
             class="me-lg-2 me-1"
             target="_blank"
-            ><img
-              style="background-color: black"
-              src="Assets/img/Facebook Icon.png"
-              alt=""
+            ><img src="Assets/img/whatsapp.png" alt=""
           /></a>
           <img onclick="closeSlider()" src="Assets/img/Icon exit.png" alt="" />
         </div>
