modified:   index.html

--- a/index.html
+++ b/index.html
@@ -98,7 +98,9 @@
               terpercaya.
             </p>
 
-            <button class="button-lg-primary">Temukan Rumah</button>
+            <button class="button-lg-primary" onclick="openOnGoing()">
+              Temukan Rumah
+            </button>
             <a href="#">
               <img src="Assets/img/Right Arrow lg.png" alt="" />
             </a>
@@ -498,7 +500,7 @@
             <h2>Fitur Rumah</h2>
           </div>
           <div class="col see-all">
-            <button class="button-fitur">
+            <button class="button-fitur" onclick="openOnGoing()">
               Lihat Semua..
               <img src="Assets/img/Right Arrow.png" alt="" class="ms-4" />
             </button>
@@ -663,7 +665,13 @@
                       >Pertanyaan Anda..</label
                     >
                   </div>
-                  <button type="submit" class="button-kontak">Kirim</button>
+                  <button
+                    type="submit"
+                    onclick="openOnGoing()"
+                    class="button-kontak"
+                  >
+                    Kirim
+                  </button>
                 </form>
               </div>
             </div>
